--- a/Vega.Embed/Vega.Embed.csproj
+++ b/Vega.Embed/Vega.Embed.csproj
@@ -19,7 +19,14 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
-
+	
+  <ItemGroup>
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.8.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+	
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.15" />
   </ItemGroup>
@@ -27,6 +34,8 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.4" />
   </ItemGroup>
+	
+	
   <ItemGroup>
     <None Include="..\README.md">
       <Pack>True</Pack>
@@ -34,4 +43,6 @@
     </None>
   </ItemGroup>
 	
+
+
 </Project>
