--- a/Vega.Embed/package.json
+++ b/Vega.Embed/package.json
@@ -1,15 +1,12 @@
 {
   "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "devDependencies": {
     "@microsoft/signalr": "^8.0.7",
     "@types/blazor__javascript-interop": "^3.1.7",
     "@types/node": "^22.13.10"
   },
   "dependencies": {
-
+    "async-lock": "1.4.1",
     "vega-embed": "7.0.2"
   }
 }
