--- a/Vega.Embed/package.json
+++ b/Vega.Embed/package.json
@@ -1,12 +1,18 @@
 {
   "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "node ./esbuild.config.mjs"
+  },
   "devDependencies": {
+    "esbuild": "^0.25.4",
     "@microsoft/signalr": "^8.0.7",
     "@types/blazor__javascript-interop": "^3.1.7",
-    "@types/node": "^22.13.10"
+    "@types/node": "^22.13.10",
+    "@types/async-lock": "^1.4.2"
   },
   "dependencies": {
-    "async-lock": "1.4.1",
+    "await-semaphore": "0.1.3",
     "vega-embed": "7.0.2"
   }
 }
