--- a/Vega.Embed/package.json
+++ b/Vega.Embed/package.json
@@ -12,7 +12,7 @@
     "@types/async-lock": "^1.4.2"
   },
   "dependencies": {
-    "await-semaphore": "0.1.3",
+    "async-mutex": "0.5.0",
     "vega-embed": "7.0.2"
   }
 }
