Fixed TypeScript compilation failed when referencing Vega.Embed

--- a/Vega.Embed/Vega.Embed.csproj
+++ b/Vega.Embed/Vega.Embed.csproj
@@ -12,8 +12,12 @@
 	<Description>Vega-Embed integration for Blazor</Description>
     <PackageTags>Vega, Vega-Lite, Vega-Embed, aspnetcore, components, Blazor</PackageTags>
     <Copyright>© RamType0</Copyright>
-	<VersionPrefix>0.3.0</VersionPrefix>
+	<VersionPrefix>0.3.1</VersionPrefix>
   </PropertyGroup>
+
+  <ItemGroup>
+
+  </ItemGroup>
 
 
   <ItemGroup>
@@ -34,13 +38,20 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+	
+    <Content Remove="package.json" />
+    <TypeScriptCompile Include="package.json" />
+	<Content Remove="package-lock.json" />
+    <TypeScriptCompile Include="package-lock.json" />
+    <Content Remove="tsconfig.json" />
+    <TypeScriptCompile Include="tsconfig.json" />
   </ItemGroup>
 	
-  <Target Name="NPM Install" AfterTargets="PreBuildEvent">
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="npm install" />
   </Target>
 	
-  <Target Name="NPM Build" AfterTargets="PostBuildEvent">
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="npm run build" />
   </Target>
 	
