--- a/Vega.Embed/tsconfig.json
+++ b/Vega.Embed/tsconfig.json
@@ -6,7 +6,6 @@
     "moduleResolution": "bundler",
     "skipLibCheck": true,
     "strict": true,
-    "noEmitOnError": true,
-    "sourceMap": true
+    "noEmitOnError": true
   }
 }
