--- a/Vega.Embed/Vega.Embed.csproj
+++ b/Vega.Embed/Vega.Embed.csproj
@@ -36,7 +36,7 @@
     </None>
 	<Content Remove="package*.json;tsconfig.json"/>
     <TypeScriptCompile Include="package*.json;tsconfig.json"/>
-
+	<Content Remove="esbuild.config.mjs"/>
   </ItemGroup>
 	
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
